tests/correctness/resources/miniboxing/tests/compile/mb_nested_class_third.check
newSource1.scala:7: error: The program is accessing field c of miniboxed class/trait CCC, a pattern which becomes invalid after the
miniboxing transformation. Please allow Scala to generate accessors by using val/var or removing the "private[this]" qualifier:
  val c: T".
    def foo() = println(c == d)
                        ^